--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-API: https://www.thecocktaildb.com/api.php
+# Barcyclopedia
+
+## Created By: Christian Reid
 
 Be sure to run seed file before running app.py.
